[package]
name = "bootle-geditor-3000"
version = "0.1.0"
edition = "2021"
authors = ["Amidamaru <ardtimeit@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.4.11", features = ["derive", "wrap_help"]}
csv = "1.3.0"
#paginate = "1.1.11"

[dev-dependencies]
assert_cmd = "2.0"
serial_test = "^2.0"
